# backbone-tax

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  buf.yaml  metaphor.codegen.yaml
config/: application-dev.yml  application-prod.yml  application.yml
docs/: README.md  architecture.md  contributing.md  developer-guide.md  extension-guide.md  fsd.md  glossary.md  prd.md
docs/adr/: ADR-001-tax-engine-boundary.md  ADR-002-effective-window-overlap-and-inclusive-reconciliation.md
docs/business-flows/: golden-cases.md  tax.md
docs/schema/: ARCHITECTURE.md  ERROR_CODES.md  EXAMPLES.md  GENERATION.md  INTEGRATION.md  OPENAPI.md  README.md  RULE_FORMAT_HOOKS.md  RULE_FORMAT_MODELS.md  RULE_FORMAT_WORKFLOWS.md  SCHEMA-STANDARDS.md  TYPES.md
migrations/: 20260426220000_create_enums.down.sql  20260426220000_create_enums.up.sql  20260426220001_create_tax_category_table.down.sql  20260426220001_create_tax_category_table.up.sql  20260426220002_create_tax_template_table.down.sql  20260426220002_create_tax_template_table.up.sql  20260426220003_create_tax_template_row_table.down.sql  20260426220003_create_tax_template_row_table.up.sql  20260426220004_create_withholding_category_table.down.sql  20260426220004_create_withholding_category_table.up.sql  20260426220007_add_audit_triggers.up.sql  20260426220020_tax_effective_overlap_exclude.down.sql  20260426220020_tax_effective_overlap_exclude.up.sql  20260722000002_tenant_scope_company_rls.down.sql  20260722000002_tenant_scope_company_rls.up.sql
migrations/seeds/: seed_order.yml  tax_category_seed.sql  tax_template_row_seed.sql  tax_template_seed.sql  withholding_category_seed.sql
schema/hooks/: index.hook.yaml  tax.hook.yaml
schema/models/: index.model.yaml  tax_category.model.yaml  tax_template.model.yaml  withholding_category.model.yaml
schema/openapi/: openapi.yaml
schema/workflows/: README.md
src/: lib.rs
src/application/: mod.rs
src/application/auth/: mod.rs  tax_category_auth.rs  tax_template_auth.rs  tax_template_row_auth.rs  withholding_category_auth.rs
src/application/bulk_operations/: mod.rs  shared_types.rs  tax_category_bulk.rs  tax_template_bulk.rs  tax_template_row_bulk.rs  withholding_category_bulk.rs
src/application/service/: error.rs  mod.rs  tax_category_service.rs  tax_engine.rs  tax_template_row_service.rs  tax_template_service.rs  tax_write_service.rs  withholding_category_service.rs
src/application/subscriptions/: handlers.rs  mod.rs  registry.rs
src/application/usecases/: base.rs  mod.rs  (+4 more)
src/config/: generated.rs
src/domain/: mod.rs
src/exports/: events.rs  mod.rs  services.rs  types.rs
src/handlers/: custom.rs  mod.rs
src/infrastructure/: mod.rs
src/presentation/: mod.rs
src/routes/: mod.rs
src/seeders/: mod.rs  tax_category_seeder.rs  tax_template_row_seeder.rs  tax_template_seeder.rs  withholding_category_seeder.rs
tests/: integration_tests.rs  integrity_probes.rs  tax_golden_cases.rs
tests/features/: tax.feature
tests/integration/: framework.rs  helpers.rs  mod.rs
(+76 files in other folders)
