[package]
name = "backbone-tax"
version = "0.1.2"
edition = "2021"
description = "Tax engine (region-neutral): categories, templates, effective-dated rates, withholding. Computes tax lines; Indonesia rules deferred"

[lib]
path = "src/lib.rs"

[dependencies]
# -----------------------------------------------------------------------------
# Backbone Framework crates
#
# Pulled directly from the public framework repository so this skeleton works
# anywhere on disk without path fix-up. For reproducible builds, pin to a
# specific tag or commit by replacing `branch = "main"` with `tag = "vX.Y.Z"`
# or `rev = "<commit-sha>"`. Cargo dedupes the git fetch — the repo is only
# cloned once even though four crates reference it.
# -----------------------------------------------------------------------------
backbone-core = { git = "https://github.com/faridlab/backbone-framework", tag = "v2.7.1", features = ["postgres"] }
backbone-orm = { git = "https://github.com/faridlab/backbone-framework", tag = "v2.7.1" }
backbone-auth = { git = "https://github.com/faridlab/backbone-framework", tag = "v2.7.1" }
backbone-messaging = { git = "https://github.com/faridlab/backbone-framework", tag = "v2.7.1" }

# Core async runtime and serialization
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Money/quantities — near-universal in domain modules. Generated code for any `decimal`
# field imports rust_decimal, so ship it (and the matching sqlx feature) by default.
rust_decimal = { version = "1.36", features = ["serde"] }

# Database (PostgreSQL primary)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }

# HTTP framework (Axum)
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
serde_yaml = "0.9"

# Protocol Buffers (Generated from Schema-First YAML)
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

[features]
default = []
events = []
auth = []
grpc = []
openapi = []
validation = []

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
mockall = "0.12"
pretty_assertions = "1.0"

# Integration testing framework — the generated tests/integration_tests.rs hits a live server
# via reqwest; guarded-route probes hit the router in-process via tower's ServiceExt::oneshot.
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonwebtoken = "9.3"
rand = "0.8"
